--- a/environment.yml
+++ b/environment.yml
@@ -118,12 +118,15 @@ dependencies:
   - zstd=1.5.5=hd43e919_0
   - pip:
       - absl-py==2.0.0
-      - accelerate==0.25.0.dev0
       - aiofiles==23.1.0
       - aiohttp==3.8.6
       - aiohttp-retry==2.8.3
       - aiosignal==1.3.1
+      - pyyaml-6.0.1
+      - rich
+      - accelerate
       - altair==5.1.2
+      - gradio
       - annotated-types==0.6.0
       - anyio==3.7.1
       - appdirs==1.4.4
@@ -239,7 +242,6 @@ dependencies:
       - googleapis-common-protos==1.60.0
       - googlebard==2.1.0
       - gptq-for-llama==0.1.1+cu118
-      - gradio==3.33.1
       - gradio-client==0.2.5
       - grpc-google-iam-v1==0.13.0
       - grpcio==1.59.0
@@ -293,7 +295,7 @@ dependencies:
       - lm-eval==0.3.0
       - lxml==4.9.3
       - lz4==4.3.3
-      - markdown==3.5
+      - markdown
       - markdown-it-py==2.2.0
       - markdownify==0.11.6
       - markupsafe==2.1.3
