--- a/requirements_servercondapip.txt
+++ b/requirements_servercondapip.txt
@@ -7,6 +7,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 argparse==1.4.0
 args==0.1.0
+reportlab
 arrow==1.3.0
 astunparse==1.6.3
 async-lru==2.0.4
